--- a/online_market/home_app/templates/article_list.html
+++ b/online_market/home_app/templates/article_list.html
@@ -34,7 +34,7 @@
     </form>
 
     <h2>Ajouter un nouvel article</h2>
-    <form method="post" action="{% url 'article_list' %}">
+    <form method="post" action="{% url 'add_article' %}">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Ajouter l'article</button>
